--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Max Steele
-title: 
+title: My Data Science Journey
 header-img: img/home-bg.png
 email: maxsteele731@gmail.com
 copyright_name: Max Steele
 description: > # this means to ignore newlines until "baseurl:"
-  
+  .
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  zero731
